tests/ui/errors/auto-impl.pattern.struct.stderr
error: `auto_impl` supports only ident of wildcard arguments
 --> tests/ui/errors/auto-impl.pattern.struct.rs:3:13
  |
3 |     fn test(Foo { a }: Foo) {
  |             ^^^
